--- a/manifest.json
+++ b/manifest.json
@@ -3,13 +3,17 @@
 	{
 		"src":"192px_icon.png",
 		"type":"image/png",
-		"sizes":"192x192"},
+		"sizes":"192x192",
+		"purpose":"maskable"
+	},
 	{
 		"src":"512px_icon.png",
 		"type":"image/png",
-		"sizes":"512x512"
+		"sizes":"512x512",
+		"purpose":"maskable"
 	}
-	]
-	,"start_url": "/?source=pwa",
-	"display": "standalone"
+	],
+	"start_url": "/?source=pwa",
+	"display": "fullscreen"
+	
 }
