--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,8 @@
 		"purpose":"maskable"
 	}
 	],
-	"start_url": "/?source=pwa",
-	"display": "fullscreen"
+	"start_url": "index.html",
+	"display": "fullscreen",
+	"background_color": "#000000"
 	
 }
